--- a/assets/style.css
+++ b/assets/style.css
@@ -112,9 +112,9 @@ strong {
     color: #1a7082;
 }
 
-.remark-code {
+/* .remark-code {
     font-size: 8em;
-}
+} */
 
 ul > li, ol > li {
      margin: 0.6em 0;
