--- a/assets/style.css
+++ b/assets/style.css
@@ -34,6 +34,18 @@ body {
     color: #0000ff;
 }
 
+.lightblue {
+    color: #0AD1FE;
+}
+
+.lightgreen {
+    color: #FDE991;
+}
+
+.teal {
+    color: #0AFEF3;
+}
+
 .Q {
     color: #009933;
 }
