--- a/assets/style.css
+++ b/assets/style.css
@@ -381,13 +381,13 @@ td {
 /* Hack to get pyhf logo on */
 .title-slide:before {
     content: '';
-    background: url("https://iris-hep.org/assets/logos/pyhf-logo.png") no-repeat;
-    /* background: url("../assets/logos/logo_experiment.png") no-repeat; */
+    /* background: url("https://iris-hep.org/assets/logos/pyhf-logo.png") no-repeat; */
+    background: url("../assets/logos/logo_experiment.png") no-repeat;
     background-size: 100% 100%;
-    width: 160px;
-    height: 108px;
+    width: 243px;
+    height: 128px;
     position: absolute;
-    bottom: 2em;
+    bottom: 0.8em;
     right: 3.3em;
     display: inline-block;
 }
