Improve color selection

--- a/assets/style.css
+++ b/assets/style.css
@@ -34,16 +34,16 @@ body {
     color: #0000ff;
 }
 
-.lightblue {
-    color: #0AD1FE;
+.pyhf {
+    color: #0094FF;
 }
 
-.lightgreen {
-    color: #FDE991;
+.roundtrip {
+    color: #ffd700;
 }
 
-.teal {
-    color: #0AFEF3;
+.root {
+    color: #cbbaed;
 }
 
 .Q {
